// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders RTL styling 1`] = `
<label
  className="c-chk__label c-chk__label--toggle is-rtl "
  data-garden-id="toggles.label"
  data-garden-version="version"
/>
`;

exports[`Label renders checked styling if provided 1`] = `
<label
  checked={true}
  className="c-chk__label c-chk__label--toggle is-checked "
  data-garden-id="toggles.label"
  data-garden-version="version"
/>
`;

exports[`Label renders default styling 1`] = `
<label
  className="c-chk__label c-chk__label--toggle "
  data-garden-id="toggles.label"
  data-garden-version="version"
/>
`;

exports[`Label renders disabled styling if provided 1`] = `
<label
  className="c-chk__label c-chk__label--toggle is-disabled "
  data-garden-id="toggles.label"
  data-garden-version="version"
  disabled={true}
/>
`;

exports[`Label renders focused styling if provided 1`] = `
<label
  className="c-chk__label c-chk__label--toggle is-focused "
  data-garden-id="toggles.label"
  data-garden-version="version"
/>
`;

exports[`Label renders hovered styling if provided 1`] = `
<label
  className="c-chk__label c-chk__label--toggle is-hovered "
  data-garden-id="toggles.label"
  data-garden-version="version"
/>
`;

exports[`Label renders regular styling if provided 1`] = `
<label
  className="c-chk__label c-chk__label--toggle c-chk__label--regular "
  data-garden-id="toggles.label"
  data-garden-version="version"
/>
`;
